# boyle

./: .gitignore  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  calc.py  calc2.py  common.py  database.sql  develop.txt  fsdb.py  gpc.py  graph.yml  make_db_picture.sh  my_graph.py  notes.md  prov.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
boyle/: __init__.py  abstract.py  config.py  core.py  dsl.py  instr.py  instrument.py  log.py  make.py  protocols.py  runcalc.py  scheduler.py  storage.py  task.py  util.py
boyleworkflow/: __init__.py  api.py  calc.py  calcs.py  cli.py  config.py  core.py  frozendict.py  graph.py  loc.py  log.py  make.py  noderunner.py  nodes.py  ops.py  runcalc.py  scheduling.py  shell.py  storage.py  task.py  tree.py  trees.py  util.py
gpc/: __init__.py  config.py  core.py  fsdb.py  gpc.py  graph.py  log.py  runner.py  spec_reader.py  storage.py
notes/: brainstorming.yml  conflicts  graph-example.yml  implementation-with-trees.md  notes.md  provenance.md  separation.md  split-collect.yml  sweep.py  types.md
old-tests/: test_config.py  test_integration.py
tests/: node_helpers.py  test_api.py  test_boyle.py  test_boyle_make_api.py  test_boyleworkflow.py  test_cache_log.py  test_comp.py  test_config.py  test_core.py  test_frozen_json.py  test_frozendict.py  test_fsdb.py  test_graph.py  test_graphstate.py  test_integrated_make.py  test_integrated_shell_make.py  test_integrated_str_make.py  test_integration.py  test_loc.py  test_log.py  test_make.py  (+16 more)
(+61 files in other folders)
