[tool.poetry]
name = "boyleworkflow"
version = "0.2.0"
description = "A tool for provenance and caching in computational workflows."
authors = ["Rasmus Einarsson <mr@rasmuseinarsson.se>", "Jonatan Kallus <mr@jkallus.se>"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
